fixed alignment of text and image in Latest Projects sections

--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,7 @@ section {
   opacity: 0.7;
 }
 
-.project-container {
+.projects-container {
   display: flex;
   flex-direction: column;
   gap: 32px;
@@ -172,13 +172,18 @@ section {
   display: flex;
   flex-direction: column;
   gap: 14px;
+  flex: 2;
 }
 
 .project-item>div:last-child {
+  flex: 1;
+  /* Image column takes less space */
   aspect-ratio: 16/9;
   max-width: 30%;
   overflow: hidden;
   border-radius: 8px;
+  flex-shrink: 0;
+  /* Prevent shrinking */
 }
 
 .project-item>div:last-child img {
